--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-redis": "^7.0.2",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.4",
     "nodemon": "^2.0.16"
